.cargo/registry/src/index.crates.io-6f17d22bba15001f/rocket_codegen-0.4.11/tests/ui-fail/catch_type_errors.stderr
error[E0277]: the trait bound `usize: Responder<'_>` is not satisfied
 --> tests/ui-fail/catch_type_errors.rs:6:30
  |
6 | fn f1(_request: &Request) -> usize {
  |                              ^^^^^ the trait `Responder<'_>` is not implemented for `usize`
  |
  = help: the following other types implement trait `Responder<'r>`:
            <&'r [u8] as Responder<'r>>
            <&'r str as Responder<'r>>
            <() as Responder<'r>>
            <Content<R> as Responder<'r>>
            <File as Responder<'r>>
            <Flash<R> as Responder<'r>>
            <JavaScript<R> as Responder<'r>>
            <MsgPack<R> as Responder<'r>>
          and 26 others

error[E0277]: the trait bound `bool: Responder<'_>` is not satisfied
  --> tests/ui-fail/catch_type_errors.rs:12:30
   |
12 | fn f2(_request: &Request) -> bool {
   |                              ^^^^ the trait `Responder<'_>` is not implemented for `bool`
   |
   = help: the following other types implement trait `Responder<'r>`:
             <&'r [u8] as Responder<'r>>
             <&'r str as Responder<'r>>
             <() as Responder<'r>>
             <Content<R> as Responder<'r>>
             <File as Responder<'r>>
             <Flash<R> as Responder<'r>>
             <JavaScript<R> as Responder<'r>>
             <MsgPack<R> as Responder<'r>>
           and 26 others

error[E0308]: mismatched types
  --> tests/ui-fail/catch_type_errors.rs:18:7
   |
17 | #[catch(404)]
   | ------------- expected due to this
18 | fn f3(_request: bool) -> usize {
   |       ^^^^^^^^^^^^^^ expected `&rocket::Request<'_>`, found `bool`
   |
   = note: expected fn pointer `for<'r, 's> fn(&'r rocket::Request<'s>) -> _`
                 found fn item `fn(bool) -> usize {f3}`

error[E0277]: the trait bound `usize: Responder<'_>` is not satisfied
  --> tests/ui-fail/catch_type_errors.rs:24:12
   |
24 | fn f4() -> usize {
   |            ^^^^^ the trait `Responder<'_>` is not implemented for `usize`
   |
   = help: the following other types implement trait `Responder<'r>`:
             <&'r [u8] as Responder<'r>>
             <&'r str as Responder<'r>>
             <() as Responder<'r>>
             <Content<R> as Responder<'r>>
             <File as Responder<'r>>
             <Flash<R> as Responder<'r>>
             <JavaScript<R> as Responder<'r>>
             <MsgPack<R> as Responder<'r>>
           and 26 others
